--- a/package.json
+++ b/package.json
@@ -26,12 +26,19 @@
     "@types/react-dom": "^18.0.5",
     "date-fns": "^2.30.0",
     "font-awesome": "^4.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
     "recharts": "^2.8.0",
+    "@chakra-ui/react": "^2.8.1",
+    "@react-input/mask": "^1.0.20",
+    "devextreme": "23.1.5",
+    "devextreme-react": "23.1.5",
+    "framer-motion": "^10.16.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
