--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@devexpress/dx-react-core": "3.0.4",
+    "@chakra-ui/react": "^2.8.1",
+    "@date-io/date-fns": "^2.17.0",
+    "@devexpress/dx-react-core": "^3.0.4",
+    "@devexpress/dx-react-grid": "^4.0.5",
+    "@devexpress/dx-react-grid-material-ui": "^4.0.5",
     "@devexpress/dx-react-scheduler": "^3.0.4",
     "@devexpress/dx-react-scheduler-material-ui": "3.0.4",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.51",
-    "@mui/material": "^5.0.4",
-    "@mui/x-date-pickers": "^5.0.0-alpha.7",
+    "@mui/material": "^5.14.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "@mui/styles": "^5.14.14",
+    "@mui/x-date-pickers": "^5.0.20",
+    "@react-input/mask": "^1.0.20",
     "@syncfusion/ej2-react-navigations": "^20.1.57",
     "@syncfusion/ej2-react-schedule": "^20.1.57",
     "@testing-library/jest-dom": "^5.17.0",
@@ -24,21 +31,24 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "axios": "^1.5.1",
     "date-fns": "^2.30.0",
+    "devextreme": "^23.1.5",
+    "devextreme-react": "^23.1.5",
     "font-awesome": "^4.7.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0",
-    "recharts": "^2.8.0",
-    "@chakra-ui/react": "^2.8.1",
-    "@react-input/mask": "^1.0.20",
-    "devextreme": "23.1.5",
-    "devextreme-react": "23.1.5",
+    "font-awesome-icons": "^1.6.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-input-mask": "^2.0.4",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
+    "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
