--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-currency-input-field": "^3.6.12",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
